# scim-googlepinyin

./: AUTHORS  Makefile.am  README.rst  TODO  autogen.sh  configure.ac
data/: Makefile.am
src/: Makefile.am  candidate_view.cpp  candidate_view.h  composing_view.cpp  composing_view.h  decoding_info.cpp  decoding_info.h  function_keys.cpp  function_keys.h  google_imengine.cpp  google_imengine.h  google_imengine_config_keys.h  google_imengine_setup.cpp  google_intl.h  google_keycode.h  ime_state.h  pinyin_decoder_service.cpp  pinyin_decoder_service.h  pinyin_ime.cpp  pinyin_ime.h  pinyin_lookup_table.cpp  pinyin_lookup_table.h  pinyin_util.cpp  pinyin_util.h
src/command/: Makefile.am  pinyinime_dictbuilder.cpp
src/data/: Makefile.am
src/include/: Makefile.am  dictdef.h  userdict.h
src/share/: Makefile.am  dictbuilder.cpp  dicttrie.cpp  matrixsearch.cpp  spellingtable.cpp  spellingtrie.cpp  userdict.cpp
